# dude-instruments

./: README.md
.github/workflows/: main.yml
onetime-spider/: Dockerfile  README.md  client.py  main.py  pyproject.toml  spider.py
onetime-spider/src/: main.py  spider.py
simple-avatars/: Dockerfile  README.md  main.py  pyproject.toml
