[tool.poetry]
name = "onetime-spider"
version = "1.0.0"
description = "Onetime spider for simple data extracting"
authors = ["akrbout <ckspoks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
parsel = "^1.8.1"
aiohttp = "^3.9.1"
random-header-generator = "^1.2"
brotli = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
